--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "blog de la kombi verde",
+  "name": "kombi-verde",
   "version": "2.0.0",
   "private": true,
   "description": "Blog de la Kombi Verde",
